2006-08-31  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/ewmh.c (atom_get):
	fix offset and length args for XGetWindowProperty() (to support 64bit
	architectures)

2006-08-30  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/events.c (HandleUnmapNotify):
	immediately handle MapRequests after unmapping a window while we still
	have the context fvwm window; this is necessary to allow the client to
	re-map a window before fvwm can reparent it to the root window
	(HandleMapRequestKeepRaised):
	cleaned up

2006-08-29  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/ewmh.c (ewmh_HandleDesktop):
	fixed handling of ClickToFocusPassesClick with the EWMH desktop
	window

2006-08-29  Harald Dunkel  <harald.dunkel@t-online.de>

	* fvwm/icccm2.c:
	* fvwm/gnome.c:
	* fvwm/decorations.c:
	fix offset and length args for XGetWindowProperty() (to support 64bit
	architectures)

2006-08-26  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	* fvwm/expand.c (expand_vars_extended):
	correctly expand break.
	* fvwm/conditional.c (__rc_matches_rcstring_consume):
	fix matching break.

2006-08-26  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/decorations.h (is_function_allowed):
	* fvwm/decorations.c (__is_resize_allowed, is_function_allowed):
	work on 'const FvwmWindow *'

	* fvwm/fvwm.h (action_flags):
	* fvwm/style.c (check_window_style_change):
	* fvwm/module_interface.c (__get_allowed_actions)
	(CONFIGARGS):
	* libs/vpacket.h (ConfigWinPacket):
	expose fvwm allowed actions to modules

2006-08-09  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/move_resize.c (__move_icon):
	*do* map icon windows for pictured icons on move, but only if they end
	up on the current desk

2006-08-09  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/move_resize.c (__move_icon):
	don't map icon windows for pictured icons on move

2006-08-09  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/style.c (remove_all_of_style_from_list):