@@ -526,156 +526,6 @@ main ()
 ])
 
 
-dnl --------------------------------------------------------------------------
-dnl contents of imlib.m4
-dnl modified by migo - write diagnostics to >&5 (i.e. config.log) not stdout
-
-# Configure paths for IMLIB
-# Frank Belew     98-8-31
-# stolen from Manish Singh
-# Shamelessly stolen from Owen Taylor
-
-dnl AM_PATH_IMLIB([MINIMUM-VERSION, [ACTION-IF-FOUND [, ACTION-IF-NOT-FOUND]]])
-dnl Test for IMLIB, and define IMLIB_CFLAGS and IMLIB_LIBS
-dnl
-AC_DEFUN([AM_PATH_IMLIB],
-[dnl
-dnl Get the cflags and libraries from the imlib-config script
-dnl
-AC_ARG_WITH([imlib-prefix],[  --with-imlib-prefix=PFX prefix for IMLIB files (optional)],
-            imlib_prefix="$withval", imlib_prefix="")
-AC_ARG_WITH(imlib-exec-prefix,[  --with-imlib-exec-prefix=PFX  exec prefix for IMLIB files (optional)],
-            imlib_exec_prefix="$withval", imlib_exec_prefix="")
-AC_ARG_ENABLE(imlibtest, [  --disable-imlibtest     do not try to compile and run a test IMLIB program],
-            , enable_imlibtest=yes)
-
-  if test x$imlib_exec_prefix != x ; then
-     imlib_args="$imlib_args --exec-prefix=$imlib_exec_prefix"
-     if test x${IMLIBCONF+set} != xset ; then
-        IMLIBCONF=$imlib_exec_prefix/bin/imlib-config
-     fi
-  fi
-  if test x$imlib_prefix != x ; then
-     imlib_args="$imlib_args --prefix=$imlib_prefix"
-     if test x${IMLIBCONF+set} != xset ; then
-        IMLIBCONF=$imlib_prefix/bin/imlib-config
-     fi
-  fi
-
-  AC_PATH_PROG(IMLIBCONF, imlib-config, no)
-  min_imlib_version=ifelse([$1], ,1.8.1,$1)
-  AC_MSG_CHECKING(for IMLIB - version >= $min_imlib_version)
-  no_imlib=""
-  if test "$IMLIBCONF" = "no" ; then
-    no_imlib=yes
-  else
-    IMLIB_CFLAGS=`$IMLIBCONF $imlibconf_args --cflags`
-    IMLIB_LIBS=`$IMLIBCONF $imlibconf_args --libs`
-
-    imlib_major_version=`$IMLIBCONF $imlib_args --version | \
-           sed 's/^[[^0-9.]]*\([[0-9]]*\)\.\([[0-9]]*\)\.\([[0-9]]*\).*$/\1/'`
-    imlib_minor_version=`$IMLIBCONF $imlib_args --version | \
-           sed 's/^[[^0-9.]]*\([[0-9]]*\)\.\([[0-9]]*\)\.\([[0-9]]*\).*$/\2/'`
-    if test "x$enable_imlibtest" = "xyes" ; then
-      ac_save_CFLAGS="$CFLAGS"
-      ac_save_LIBS="$LIBS"
-      CFLAGS="$CFLAGS $IMLIB_CFLAGS"
-      LIBS="$LIBS $IMLIB_LIBS"
-dnl
-dnl Now check if the installed IMLIB is sufficiently new. (Also sanity
-dnl checks the results of imlib-config to some extent
-dnl
-      rm -f conf.imlibtest
-      AC_TRY_RUN([
-#include <stdio.h>
-#include <stdlib.h>
-#include <Imlib.h>
-
-ImlibImage testimage;
-
-int main ()
-{
-  int major, minor;
-  char *tmp_version;
-
-  system ("touch conf.imlibtest");
-
-  /* HP/UX 9 (%@#!) writes to sscanf strings */
-  tmp_version = strdup("$min_imlib_version");
-  if (sscanf(tmp_version, "%d.%d", &major, &minor) != 2) {
-     printf("%s, bad version string\n", "$min_imlib_version");
-     exit(1);
-   }
-
-    if (($imlib_major_version > major) ||
-        (($imlib_major_version == major) && ($imlib_minor_version > minor)))
-    {
-      return 0;
-    }
-  else
-    {
-      printf("\n*** 'imlib-config --version' returned %d.%d, but the minimum version\n", $imlib_major_version, $imlib_minor_version);
-      printf("*** of IMLIB required is %d.%d. If imlib-config is correct, then it is\n", major, minor);
-      printf("*** best to upgrade to the required version.\n");
-      printf("*** If imlib-config was wrong, set the environment variable IMLIBCONF\n");
-      printf("*** to point to the correct copy of imlib-config, and remove the file\n");
-      printf("*** config.cache before re-running configure\n");
-      return 1;
-    }
-}
-
-],, no_imlib=yes,[echo $ac_n "cross compiling; assumed OK... $ac_c"])
-       CFLAGS="$ac_save_CFLAGS"
-       LIBS="$ac_save_LIBS"
-     fi
-  fi
-  if test "x$no_imlib" = x ; then
-     AC_MSG_RESULT(yes)
-     ifelse([$2], , :, [$2])
-  else
-     AC_MSG_RESULT(no)
-     if test "$IMLIBCONF" = "no" ; then
-       echo "*** The imlib-config script installed by IMLIB could not be found"
-       echo "*** If IMLIB was installed in PREFIX, make sure PREFIX/bin is in"
-       echo "*** your path, or set the IMLIBCONF environment variable to the"
-       echo "*** full path to imlib-config."
-     else
-       if test -f conf.imlibtest ; then
-        :
-       else
-          echo "*** Could not run IMLIB test program, checking why..."
-          CFLAGS="$CFLAGS $IMLIB_CFLAGS"
-          LIBS="$LIBS $IMLIB_LIBS"
-          AC_TRY_LINK([
-#include <stdio.h>
-#include <Imlib.h>
-],      [ return 0; ],
-        [ echo "*** The test program compiled, but did not run. This usually means"
-          echo "*** that the run-time linker is not finding IMLIB or finding the wrong"
-          echo "*** version of IMLIB. If it is not finding IMLIB, you'll need to set your"
-          echo "*** LD_LIBRARY_PATH environment variable, or edit /etc/ld.so.conf to point"
-          echo "*** to the installed location  Also, make sure you have run ldconfig if that"
-          echo "*** is required on your system"
-	  echo "***"
-          echo "*** If you have an old version installed, it is best to remove it, although"
-          echo "*** you may also be able to get things to work by modifying LD_LIBRARY_PATH"],
-        [ echo "*** The test program failed to compile or link. See the file config.log for the"
-          echo "*** exact error that occured. This usually means IMLIB was incorrectly installed"
-          echo "*** or that you have moved IMLIB since it was installed. In the latter case, you"
-          echo "*** may want to edit the imlib-config script: $IMLIBCONF" ])
-          CFLAGS="$ac_save_CFLAGS"
-          LIBS="$ac_save_LIBS"
-       fi
-     fi
-     IMLIB_CFLAGS=""
-     IMLIB_LIBS=""
-     ifelse([$3], , :, [$3])
-  fi
-  AC_SUBST(IMLIB_CFLAGS)
-  AC_SUBST(IMLIB_LIBS)
-  rm -f conf.imlibtest
-])
-
 # Check for gdk-imlib
 AC_DEFUN([AM_PATH_GDK_IMLIB],
 [dnl
