@@ -1,3 +1,8 @@
+2006-09-04  Renato Caldas  <seventhguardian@gmail.com>
+
+	* acinclude.m4:
+	removed the unused test for imlib
+
 2006-08-31  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>
 
 	* fvwm/ewmh.c (atom_get):
